manifests/delivery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task10-delivery-deployment
  labels:
    app: task10-delivery-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task10-delivery-app
  template:
    metadata:
      labels:
        app: task10-delivery-app
    spec:
      containers:
        - name: task10-delivery
          image: developmarat/task10.delivery:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 535
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 100
