manifests/delivery/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-delivery
  labels:
    app: postgres-delivery
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres-delivery

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-delivery-statefulset
spec:
  serviceName: "postgres-delivery"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-delivery
  template:
    metadata:
      labels:
        app: postgres-delivery
    spec:
      containers:
        - name: postgres-delivery
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgredb
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
              subPath: postgres-delivery
  volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
